--- a/configs/slurm_JZ.yaml
+++ b/configs/slurm_JZ.yaml
@@ -48,10 +48,10 @@ hydra:
     # timeout_min: 120
 
     # H100 partition, 117Go RAM, 80Go VRAM
-    # cpus_per_task: 96
+    cpus_per_task: 96
     # cpus_per_task: 72
     # cpus_per_task: 48
-    cpus_per_task: 24 # 117 Go RAM
+    # cpus_per_task: 24 # 117 Go RAM
     constraint: h100
     account: ioj@h100
     
